<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="seleccionar">Seleccionar una categoria</string>
    <string name="listaProductos">Lista de productos</string>
    <string name="cantidadPedir">Cantidad a pedir</string>
    <string name="btnAgregar">Agregar</string>

    <string name="tituloPedido">NUEVO PEDIDO</string>
    <string name="correoElectronico">Correo electronico</string>
    <string name="modoEntregaPedido">Modo de entrega</string>
    <string name="retiraPedido">Retirar en local</string>
    <string name="enviarPedido">Enviar a domicilio</string>
    <string name="direccion">Direccion</string>
    <string name="horaEntrega">Hora de entrega</string>
    <string name="agregarProducto">Agregar producto</string>
    <string name="quitarProducto">Quitar producto</string>
    <string name="finalizarPedido">Finalizar pedido</string>
    <string name="volver">Volver</string>
    <string name="pedidosRealziados"> Pedidos Realizados</string>
    <string name="btnNuevo"> Nuevo </string>
    <string name="btnMenu"> Menu </string>
    <string name="btnCancelar"> Cancelar</string>
    <string name="btnVerDetalle"> Ver Detalle </string>
    <string name="contacto" > Contacto: </string>
    <string name="fechaDeEntrega"> Fecha de Entrega: </string>
    <string name="itemsPagar"> items: Pagar:</string>
    <string name="estado">Estado: </string>
    <string name="costoTotal">"Costo total: "</string>
    <string name="prepararPedidos">Preparar pedidos</string>

    <string name="channelName">Notificaciones lab3</string>
    <string name="channelDescription">Este es el canal definido en el lab3</string>
</resources>
