<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvTituloPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloPedido" />

    <TextView
        android:id="@+id/tvCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correoElectronico" />

    <EditText
        android:id="@+id/editPedidoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modoEntregaPedido" />

    <RadioGroup
        android:id="@+id/optPedidoModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/optPedidoRetira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retiraPedido" />

        <RadioButton
            android:id="@+id/optPedidoEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviarPedido" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horaEntrega" />

    <EditText
        android:id="@+id/editHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <ListView
        android:id="@+id/listProductosPedido"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:choiceMode="singleChoice">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnQuitarProductoPedido"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quitarProducto"
            android:enabled="false" />

        <Button
            android:id="@+id/btnAgregarProductoPedido"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agregarProducto" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCostoTotalPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolverPedido"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/volver" />

        <Button
            android:id="@+id/btnFinalizarPedido"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizarPedido" />

    </LinearLayout>

</LinearLayout>