<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvSeleccionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar" />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaProductos" />

    <ListView
        android:id="@+id/listProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <TextView
        android:id="@+id/tvCantidadPedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidadPedir" />

    <EditText
        android:id="@+id/edtCantidadProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregar" />

</LinearLayout>